# DataCapture

./: .gitignore  CMakeLists.txt  README.md
src/: Application.cpp  CMakeAuto.txt  CMakeLists.txt  Director.cpp  Director.hpp  main.cpp
src/gui/: CMakeLists.txt  GuiManager.cpp  GuiManager.hpp  MainWindow.cpp  MainWindow.hpp  NetworkView.cpp  NetworkView.hpp  PlaybackFileView.cpp  PlaybackFileView.hpp  PlaybackView.cpp  PlaybackView.hpp  RecordFileView.cpp  RecordFileView.hpp  RecordView.cpp  RecordView.hpp  SerialDeviceView.cpp  SerialDeviceView.hpp  SerialPortComboBox.cpp  SerialPortComboBox.hpp  mainwindow.ui  networkview.ui  playbackfileview.ui  playbackview.ui  recordfileview.ui  recordview.ui  serialdeviceview.ui
src/serial/: CMakeLists.txt  SerialPlayer.cpp  SerialPlayer.hpp  SerialRecorder.cpp  SerialRecorder.hpp
src/task/: CMakeLists.txt  LoadManagersTask.cpp  LoadManagersTask.hpp  UnloadManagersTask.cpp  UnloadManagersTask.hpp
src/tcp/: CMakeLists.txt  TcpPlayer.cpp  TcpPlayer.hpp  TcpRecorder.cpp  TcpRecorder.hpp
src/udp/: CMakeLists.txt  UdpPlayer.cpp  UdpPlayer.hpp  UdpRecorder.cpp  UdpRecorder.hpp
