cmake_minimum_required(VERSION 3.5)

project(SerialCapture VERSION 0.1.0 LANGUAGES CXX)

set(QTDIR $ENV{QTDIR})

set(CMAKE_PREFIX_PATH ${QTDIR})
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_OSX_DEPLOYMENT_TARGET "10.12")

find_package(Qt5 COMPONENTS Widgets SerialPort)

include_directories("${CMAKE_CURRENT_SOURCE_DIR}/src")

if(WIN32)
    set(APP_BUNDLE WIN32)
elseif(APPLE)
    set(APP_BUNDLE MACOSX_BUNDLE)
endif()

file(GLOB_RECURSE RESOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*[.rc])
file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*[.cpp|.hpp|.ui])

add_executable(${PROJECT_NAME} ${APP_BUNDLE} ${SOURCES} ${RESOURCES})

if(APPLE)
    set_target_properties(${PROJECT_NAME} PROPERTIES MACOSX_BUNDLE_INFO_PLIST ${CMAKE_CURRENT_SOURCE_DIR}/res/mac/AppleInfo.plist)
    set(APPLE_GUI_BUNDLE_NAME ${PROJECT_NAME})
    set(APPLE_GUI_EXECUTABLE ${PROJECT_NAME})
    set(APPLE_GUI_BUNDLE_VERSION ${PROJECT_VERSION})
endif()

target_link_libraries(${PROJECT_NAME} PRIVATE Qt5::Widgets Qt5::SerialPort)
