cmake_minimum_required(VERSION 3.5)

project(DataCapture VERSION 0.2.1 LANGUAGES CXX)

set(QTDIR $ENV{QTDIR})

set(CMAKE_PREFIX_PATH ${QTDIR})
set(CMAKE_INCLUDE_CURRENT_DIR ON)
set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTOUIC ON)
set(CMAKE_AUTORCC ON)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_OSX_DEPLOYMENT_TARGET "10.14")

find_package(Qt5 COMPONENTS Widgets Network SerialPort)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src)
